# bricklens

./: .gitmodules  README.md
python/: eval-mscoco.sh  eval.sh  generate_bricklens_dataset.sh  pyproject.toml  train.sh
python/bricklens/render/: README.md  generate_detection_dataset.py  generate_mess.py  mess.ldr
python/bricklens/render/blender/: blender_render.py  blender_utils.py  generate_detection_dataset.py
python/bricklens/render/pov/: generate_detection_dataset.py
python/bricklens/render/spark/: makecluster.sh  submit.sh
python/bricklens/train/: train.py
python/bricklens/train/detection/: NOTES.txt  dataset.py  eval.py  model.py  train.py  utils.py
python/bricklens/train/detection/config/: dataset.yml  dataset_detection_1000.yml  dataset_detection_simple_100.yml  mscoco-categories.yml  yolov3-mscoco-mdw.yml  yolov3-mscoco-pjreddie.yml  yolov3.yml
render/: Justfile  README.md  generate_bricklens_dataset.sh  pyproject.toml
render/bricklens/render/: blender_utils.py  collect_dataset.py  generate_detection_dataset.py
render/deploy/: deploy.sh  makecluster.sh  render.sh  teardown.sh
render/deploy/docker/: Dockerfile.render
render/deploy/helm/render/: Chart.yaml  values.yaml
render/deploy/helm/render/templates/: job.yaml
render/docker/: Dockerfile.render  userpref.blend
render/render/: generate_detection_dataset.py
render/spark/: bricklens_custom.sh  make_custom_dataproc_env.sh
train/: README.md  pyproject.toml
train/classification/: train.py
train/detection/: NOTES.txt  dataset.py  model.py
train/detection/config/: dataset_detection_1000.yml  dataset_detection_simple_1000.yml  yolov3.yml
