[tool.poetry]
name = "bricklens"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <mdw@mdw.la>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.19.2"
Pillow = "^7.2.0"
pyldraw = { git = "https://github.com/mdwelsh/python-ldraw", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^3.4"
